[gd_scene load_steps=3 format=2]

[ext_resource path="res://Art/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://Sources/UI/Menus/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
margin_left = 610.0
margin_top = 133.0
margin_right = 1310.0
margin_bottom = 363.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 700, 230 )
size_flags_horizontal = 6
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer"]
margin_left = 160.0
margin_top = 57.0
margin_right = 540.0
margin_bottom = 172.0
rect_min_size = Vector2( 380, 115 )
size_flags_horizontal = 4
theme = ExtResource( 1 )
text = "Welcome to the

DISCOBOWL !"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 708.0
margin_right = 1920.0
margin_bottom = 788.0
size_flags_horizontal = 7
size_flags_vertical = 6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLocal" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 179.0
margin_right = 779.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 80 )
focus_neighbour_right = NodePath("../ButtonOnline")
focus_neighbour_bottom = NodePath("../../QuitButton")
focus_next = NodePath("../ButtonOnline")
focus_previous = NodePath("../../QuitButton")
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 1 )
text = " Local Game "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOnline" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1141.0
margin_right = 1741.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 600, 80 )
focus_neighbour_left = NodePath("../ButtonLocal")
focus_neighbour_bottom = NodePath("../../QuitButton")
focus_next = NodePath("../../QuitButton")
focus_previous = NodePath("../ButtonLocal")
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "Online Game "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_left = 810.0
margin_top = 1000.0
margin_right = 1110.0
margin_bottom = 1080.0
rect_min_size = Vector2( 300, 80 )
focus_neighbour_left = NodePath("../HBoxContainer/ButtonLocal")
focus_neighbour_right = NodePath("../HBoxContainer/ButtonOnline")
focus_next = NodePath("../HBoxContainer/ButtonLocal")
focus_previous = NodePath("../HBoxContainer/ButtonOnline")
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Quit"

[node name="PopupLocal" type="PopupDialog" parent="."]
anchor_left = 0.15
anchor_top = 0.1
anchor_right = 0.85
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopupLocal"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="PopupLocal/VBoxContainer"]
margin_right = 1075.0
margin_bottom = 148.0
size_flags_vertical = 3

[node name="LocalTitle" type="Label" parent="PopupLocal/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 56.0
margin_right = 1068.0
margin_bottom = 92.0
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "Choose a number of players"
align = 1
valign = 1

[node name="LocalSlider" type="HSlider" parent="PopupLocal/VBoxContainer"]
margin_left = 362.0
margin_top = 186.0
margin_right = 712.0
margin_bottom = 266.0
rect_min_size = Vector2( 350, 80 )
size_flags_horizontal = 4
size_flags_vertical = 6
min_value = 1.0
max_value = 4.0
value = 2.0
rounded = true
tick_count = 4
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalNbPlayers" type="LineEdit" parent="PopupLocal/VBoxContainer"]
margin_left = 362.0
margin_top = 339.0
margin_right = 712.0
margin_bottom = 419.0
rect_min_size = Vector2( 350, 80 )
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "2"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocalStart" type="Button" parent="PopupLocal/VBoxContainer"]
margin_left = 362.0
margin_top = 492.0
margin_right = 712.0
margin_bottom = 572.0
rect_min_size = Vector2( 350, 80 )
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource( 1 )
text = "Start Game"

[node name="LocalCancel" type="Button" parent="PopupLocal/VBoxContainer"]
margin_left = 362.0
margin_top = 611.0
margin_right = 712.0
margin_bottom = 691.0
rect_min_size = Vector2( 350, 80 )
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource( 1 )
text = "Cancel"

[node name="PopupOnline" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 150 )
theme = ExtResource( 1 )
window_title = "Warning"
dialog_text = "Not available yet"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonLocal" to="." method="_on_ButtonLocal_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonOnline" to="." method="_on_ButtonOnline_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="value_changed" from="PopupLocal/VBoxContainer/LocalSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="text_changed" from="PopupLocal/VBoxContainer/LocalNbPlayers" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="PopupLocal/VBoxContainer/LocalStart" to="." method="_on_LocalStart_pressed"]
[connection signal="pressed" from="PopupLocal/VBoxContainer/LocalCancel" to="." method="_on_ButtonCancel_pressed"]
